--- a/.github/workflows/main_taskflask.yml
+++ b/.github/workflows/main_taskflask.yml
@@ -26,6 +26,6 @@ jobs:
     - name: Zip and deploy to Azure
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'flasktask'
+        app-name: 'testflask'
         package: .
         publish-profile: ${{ secrets.AZURE_SECRET }}
